--- a/messager/frontend/static/frontend/css/style.css
+++ b/messager/frontend/static/frontend/css/style.css
@@ -154,6 +154,13 @@ h1, h2, h3, h4, h5, p {
 .container {
     width: 90%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content {
+    width: 35%;
 }
 
 .flex-row {
@@ -229,6 +236,7 @@ h1, h2, h3, h4, h5, p {
 .section {
     display: none;
     padding-top: calc(var(--gap)*2);
+    padding-bottom: calc(var(--gap)*2);
     animation: hide_section 0.3s ease-in-out forwards;
 }
 
